--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,21 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    min-height: 100vh;
+}
+
+a {
+    color: #00b7ff;
+    text-decoration: none;
+}
+
+h1 {
+    color: 15px;
+}
+
+
 .link-btn {
     background-color: rgb(67, 163, 230);
     color: white;
@@ -9,4 +27,8 @@
     padding: 5px 10px;
     margin: 10px;
     border-radius: 8px;
+  }
+
+  .app-container {
+    background-image: url('./background-search.jpg');
   }
