--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -1,44 +1,80 @@
-.btn-login {
-    border-radius: 30px !important;
-    color: #fff !important;
-    font-size: 1.1em !important;
-    background-image: linear-gradient(to right, #4568dc, #b06ab3);
-    padding: 10px !important;
-    cursor: pointer;
-    width: 200px;
-    border: none !important;
+/* .btn-login {
+  border-radius: 30px !important;
+  color: #fff !important;
+  font-size: 1.1em !important;
+  background-image: linear-gradient(to right, #4568dc, #b06ab3);
+  padding: 10px !important;
+  cursor: pointer;
+  width: 200px;
+  border: none !important;
 }
 
 .btn-login:hover {
-    color: #fff;
-    background-image: linear-gradient(to right, #b06ab3, #4568dc)
+  color: #fff;
+  background-image: linear-gradient(to right, #b06ab3, #4568dc);
+} */
+
+.btn-login {
+  background-image: linear-gradient(
+    to right,
+    #4776e6 0%,
+    #8e54e9 51%,
+    #4776e6 100%
+  );
+  border-radius: 30px !important;
+  width: 200px;
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white !important;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+}
+
+.btn-login:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff !important;
+  text-decoration: none;
 }
 
 .btn-register {
-    border-radius: 30px !important;
-    font-size: 1.1em !important;
-    color: #19547b !important;
-    background-color: #fff;
-    padding: 10px !important;
-    width: 200px;
-    cursor: pointer;
-    /* border: 2px solid #19547b !important */
-    border: none !important;
+  background-image: linear-gradient(
+    to right,
+    #16a085 0%,
+    #f4d03f 51%,
+    #16a085 100%
+  );
+  border-radius: 30px !important;
+  width: 200px;
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white !important;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
 }
 
 .btn-register:hover {
-    color: #fff;
-    border: none !important;
-    background-image: linear-gradient(to right, #ffd89b, #19547b)
+  background-position: right center; /* change the direction of the change here */
+  color: #fff !important;
+  text-decoration: none;
 }
 
 .field-icon {
-    width: 20px;
+  width: 45px;
 }
 .header-box {
-    padding-left: 5px;
+  padding-left: 5px;
 }
 
 .logo-auth {
-    width: 120px;
+  width: 120px;
 }
