--- a/src/components/App.css
+++ b/src/components/App.css
@@ -31,4 +31,14 @@ h1 {
 
   .app-container {
     background-image: url('./background-search.jpg');
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .content-container {
+      position: absolute;
+      top: 75px;
+      width: 100%;
+      height: 100%;
   }
