--- a/src/components/maps/Mapbox.css
+++ b/src/components/maps/Mapbox.css
@@ -1,8 +1,9 @@
 #map {
-    width: 100%;
-    height: 755px;
-    border: 2px solid black;
-    border-radius: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
 }
 
 .card-city {
@@ -20,4 +21,24 @@
 
 .card-color-2 {
     background-color: rgb(171, 169, 130)
+}
+
+.container-city {
+    width: 100%;
+    height: 100%;
+}
+
+.cityListWrapper {
+    width: 40%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    bottom: 0;
+    left: 0;
+    overflow-y: scroll;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: left;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.8);
 }
