--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -1,3 +1,12 @@
+.nav-bar {
+    width: 100%;
+    height: 75px;
+    z-index: 1;
+    position: fixed;
+    top: 0;
+}
+
+
 .nav-bar-ul {
     display: flex;
     align-items: center;
