--- a/src/components/maps/Mapbox.css
+++ b/src/components/maps/Mapbox.css
@@ -7,8 +7,10 @@
 }
 
 .card-city {
-    border: 2px solid black;
+    background-color: white;
+    border: 1px solid #e7e7ec;
     border-radius: 8px;
+    box-shadow: 7px 6px 36px -15px rgb(109 109 151 / 40%);
 }
 
 #search-form input {
@@ -28,17 +30,31 @@
     height: 100%;
 }
 
-.cityListWrapper {
-    width: 40%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    bottom: 0;
-    left: 0;
-    overflow-y: scroll;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: left;
-    z-index: 1;
-    background-color: rgba(255, 255, 255, 0.8);
+.city-header .city-header-name {
+    text-decoration: none;
+}
+
+.city-header h4 {
+    color: #232740;
+    font-size: 20px !important;
+}
+
+.city-header p {
+    font-size: 16px !important;
+}
+
+.heart {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.card-city .test {
+    border: none;
+    background: none;
+    background-color: none;
+    text-decoration: underline;
+    font-size: 18px;
+    color: black;
+    padding: 8px;
 }
