city detail simple complete

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -26,7 +26,8 @@ a {
   }
 
   .app-container {
-    background-image: url('./background-search.jpg');
+    /* background-image: url('./background-search.jpg'); */
+    background-color: #E5E5E5;
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -36,5 +37,17 @@ a {
       position: absolute;
       top: 75px;
       width: 100%;
-      height: 100%;
+      height: 100vh;
   }
+
+  .content-container-overscreen {
+      position: absolute;
+      margin-top: 75px;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+  }
+
+.content-container-overscreen::-webkit-scrollbar {
+    display: none;
+}
